# deps-analyzer

./: .gitignore  ARCHITECTURE_DECISIONS.md  CONTRIBUTING.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  Makefile  README.md  REMOVED_FEATURES.md  TODO.md  biome.json  coverage.lcov  go.mod  go.sum  lefthook.yml  module.json  test-bazel-xml  test_binaries.go  tools.go  workspace.json
.agent/workflows/: git_commit.md
LICENSES/: README.md  buildifier.txt  cytoscape-dagre.txt  cytoscape.txt  dagre.txt  esbuild.txt  flaticon-filter.txt  fmt.txt  fsnotify.txt  goimports.txt  gonum.txt  gorilla-mux.txt  lefthook.txt  nlohmann-json.txt  pflag.txt  uuid.txt
cmd/analyzer/: main.go
cmd/deps-analyzer/: main.go
cmd/test-bazel-xml/: main.go
coverage_report/: cmd_line  gcov.css  index-sort-f.html  index-sort-l.html  index.html
coverage_report/Users/ritzau/src/ritzau/repos/deps-analyzer/cmd/deps-analyzer/: index.html  main.go.gcov.html
coverage_report/analysis/: index.html  runner.go.gcov.html
coverage_report/bazel/: executor.go.gcov.html  executor_mock.go.gcov.html  finder.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  parser.go.gcov.html  query.go.gcov.html  source.go.gcov.html  workspace.go.gcov.html
coverage_report/binaries/: binaries.go.gcov.html  index.html
coverage_report/config/: config.go.gcov.html  index.html
coverage_report/graph/: file_graph.go.gcov.html  index.html
coverage_report/lens/: diff.go.gcov.html  distance.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  renderer.go.gcov.html
coverage_report/logging/: compact_handler.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  logger.go.gcov.html  middleware.go.gcov.html
coverage_report/model/: graph.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  model.go.gcov.html
coverage_report/pubsub/: index.html  sse.go.gcov.html
coverage_report/symbols/: index-sort-f.html  index-sort-l.html  index.html  nm.go.gcov.html  source.go.gcov.html
coverage_report/watcher/: change_detector.go.gcov.html  debouncer.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  watcher.go.gcov.html
coverage_report/web/: index.html  server.go.gcov.html
example/: MODULE.bazel  README.md
example/audio/: BUILD.bazel  audio_engine.cc  audio_engine.h
example/config/: BUILD.bazel  config.cc  config.h
example/core/: BUILD.bazel  engine.cc  engine.h  state.cc  state.h
example/cycle_demo/: BUILD.bazel  a.cc  a.h  b.cc  b.h  file_a.h  file_b.h
example/foobar/: BUILD.bazel  foobar.c
example/formatter/: BUILD.bazel  formatter.cc  formatter.h
example/graphics/: BUILD.bazel  renderer.cc  renderer.h
example/main/: BUILD.bazel  main.cc
example/plugins/: BUILD.bazel  renderer.cc  renderer.h
example/util/: BUILD.bazel  file_io.cc  file_io.h  math.cc  math.h  orphaned.cc  strings.cc  strings.h  time.cc  time.h
pkg/: TODO.md
pkg/analysis/: coverage.go  coverage_test.go  cross_package.go  cross_package_test.go  runner.go  source.go  target_files.go
pkg/analysis/api/: source.go
pkg/analysis/ldd/: scanner.go  scanner_test.go
pkg/bazel/: executor.go  executor_mock.go  finder.go  parser.go  parser_test.go  query.go  query_test.go  source.go  source_test.go  workspace.go
pkg/binaries/: binaries.go
pkg/config/: config.go
pkg/cycles/: file_cycles.go  file_cycles_test.go  tarjan.go
pkg/finder/: files.go  files_test.go
pkg/graph/: file_graph.go  file_graph_test.go  target_graph.go.old  target_graph_test.go.old
pkg/lens/: diff.go  distance.go  lens.go  renderer.go
pkg/logging/: compact_handler.go  logger.go  middleware.go
pkg/model/: graph.go  model.go
pkg/output/: formatter.go
pkg/pubsub/: README.md  pubsub.go  sse.go  sse_test.go
pkg/symbols/: nm.go  nm_test.go  source.go  source_test.go
pkg/watcher/: change_detector.go  debouncer.go  watcher.go
pkg/web/: generate.go  server.go
pkg/web/static/: app.js  index.html  lens-config.js  lens-controls.js  lens-renderer.js  logger.js  storage.js  styles.css  view-state.js
