# Test Bazel workspace for C++ dependency analyzer
# This workspace demonstrates common issues in C++ Bazel projects

module(
    name = "bazel_test_workspace",
    version = "0.1.0",
)

# C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.1.1")

# Platforms for platform-specific configurations
bazel_dep(name = "platforms", version = "0.0.11")

# Foreign CC rules for building CMake/Make/etc projects
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

# External C++ library: fmt (modern C++ formatting library)
bazel_dep(name = "fmt", version = "11.0.2")

# External CMake-based library: nlohmann/json
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nlohmann_json",
    build_file = "//third_party:nlohmann_json.BUILD",
    sha256 = "0d8ef5af7f9794e3263480193c491549b2ba6cc74bb018906202ada498a79406",
    strip_prefix = "json-3.11.3",
    urls = ["https://github.com/nlohmann/json/archive/refs/tags/v3.11.3.tar.gz"],
)
