# Audio shared library BUILD file

cc_shared_library(
    name = "audio",
    visibility = ["//visibility:public"],
    deps = [":audio_impl"],
)

cc_library(
    name = "audio_impl",
    srcs = ["audio_engine.cc"],
    hdrs = ["audio_engine.h"],
    visibility = ["//visibility:public"],
    deps = ["//util"],
)
