# Core package BUILD file

cc_library(
    name = "core",
    srcs = [
        "engine.cc",
        "state.cc",
    ],
    hdrs = [
        "engine.h",
        "state.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//util",  # Depends on the monolithic util library
    ],
)
