# Graphics shared library BUILD file

cc_shared_library(
    name = "graphics",
    visibility = ["//visibility:public"],
    deps = [":graphics_impl"],
)

cc_library(
    name = "graphics_impl",
    srcs = ["renderer.cc"],
    hdrs = ["renderer.h"],
    linkopts = ["-ldl"],  # System library dependency
    visibility = ["//visibility:public"],
)
