# Main application BUILD file

cc_binary(
    name = "test_app",
    srcs = ["main.cc"],
    deps = [
        "//core:core",
        "//util:util",
        "//graphics:graphics_impl",  # Link against graphics implementation
    ],
    dynamic_deps = [
        "//graphics:graphics",  # Dynamically linked shared library
    ],
    data = [
        "//audio:audio",  # Shared library included as data (loaded at runtime)
    ],
    linkopts = [
        "-Wl,-export_dynamic",  # Export symbols for plugins (macOS compatible)
        "-ldl",  # System library for dynamic loading
    ],
)
