# Main application BUILD file

cc_binary(
    name = "test_app",
    srcs = glob(["*.cc"]),
    data = [
        "//audio",  # Shared library included as data (loaded at runtime)
    ],
    dynamic_deps = [
        "//graphics:graphics",  # Dynamically linked shared library
    ],
    linkopts = [
        "-Wl,-export_dynamic",  # Export symbols for plugins (macOS compatible)
        "-ldl",  # System library for dynamic loading
    ],
    deps = [
        "//config",  # JSON config using nlohmann/json
        "//core",
        "//formatter",  # External dependency via fmt library
        "//graphics:graphics_impl",  # Link against graphics implementation
        "//util",
    ],
)
