# Plugins package BUILD file
# This builds a shared library (.so file)

cc_binary(
    name = "renderer_plugin",
    srcs = [
        "renderer.cc",
        "renderer.h",
    ],
    linkshared = True,  # Build as .so
    visibility = ["//visibility:public"],
    deps = [
        "//core",
        "//util",  # This creates duplicate dependencies issue
    ],
)
